# qingzhenyun-lite

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  common_id.h  fuck.cbp  main.cpp
cli/: CMakeLists.txt
cli/qingzhen-cli/: CMakeLists.txt  main.cpp
cmake/: find_lib.cmake
common/: common_event_ids.h
entity/: response_entity.h
frame/: log_frame.cpp  log_frame.h  login_frame.cpp  login_frame.h  main_frame.cpp  main_frame.h
frame/notebook/: note_index.cpp  note_index.h  remote_download_task.cpp  remote_download_task.h  remote_user_file_panel.cpp  remote_user_file_panel.h
include/qingzhen/: path_util.h  properity.hpp  string_util.h
include/qingzhen/api/: common_api_client.hpp  common_list_response.hpp  file.h  file_list.h  file_requests.h  models.hpp  user.h  user_api_client.hpp  user_file_client.hpp
include/qingzhen/transfer/: base_file_task.hpp  basic_file_buf.h  file_hash_container.h  part_progress_info.h  simple_http_downloader.h  single_file_task.h  transfer_entity.h  transfer_item.h  transfer_manager.h  transfer_progress.h
model/: remote_download_task_model.cpp  remote_download_task_model.h  remote_file_model.cpp  remote_file_model.h  user_model.cpp  user_model.h
src/: CMakeLists.txt  path_util.cpp  string_util.cpp  test.cpp
src/api/: file.cpp  file_requests.cpp  user.cpp
src/transfer/: file_hash_container.cpp  simple_http_downloader.cpp  single_file_task.cpp  transfer_entity.cpp  transfer_item.cpp  transfer_manager.cpp  transfer_progress.cpp
util/: common_api.cpp  common_api.h  common_util.h  simple_timer.cpp  simple_timer.h
